--- a/docs/webshader/import-three.mdx
+++ b/docs/webshader/import-three.mdx
@@ -1,6 +1,6 @@
 ---
 title: Import three in documentry
-sidebar_position: 4
+sidebar_position: 1
 ---
 
 想要把shader效果直接显示在文档中，第一个想到的解决方案是看能不能将three.js引入进来，然后再看看能不能在three的框架下面直接把效果显现出来。
@@ -8,5 +8,5 @@ sidebar_position: 4
 
 <MyScene/>
 
-import MyScene from "/src/components/Scene/MyScene";
+import MyScene from "./components/Scene/MyScene";
 
