--- a/docs/webshader/import-three.mdx
+++ b/docs/webshader/import-three.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 想要把shader效果直接显示在文档中，第一个想到的解决方案是看能不能将three.js引入进来，然后再看看能不能在three的框架下面直接把效果显现出来。
 最简单的方法似乎是使用React Three Fiber。
 
-<MyScene/>
+<Scene/>
 
-import MyScene from "./components/Scene/MyScene";
+import Scene from "./components/scene_1/MyScene";
 
