--- a/docs/webshader/getting-started/instanced-mesh.mdx
+++ b/docs/webshader/getting-started/instanced-mesh.mdx
@@ -5,4 +5,9 @@ sidebar_position: 6
 
 <Scene/>
 
-import Scene from "./components/scene_6/Scene";
+80 x 60
+
+<SceneTwo/>
+
+import Scene from "./components/scene_6/Scene"
+import SceneTwo from "./components/scene_6_2/Scene"
